@@ -1,5 +1,6 @@
 30 Dec 2003 mipsator
  * imported some code for internal support of pkgconfig.
+ * added pkgconfig_test.c in tests.
 
 29 Dec 2003 mipsator
  * moved hash_add() as hash_update() and kept hash_add() as an alias.
